--- a/.github/workflows/build-macos-release.yml
+++ b/.github/workflows/build-macos-release.yml
@@ -55,10 +55,10 @@ jobs:
           echo "Hello world!" >> "${root}/first-startup.txt"
           
           ## clone repositories
-          git clone --depth 1 https://github.com/PetervanLunteren/EcoAssist-experiments.git "${root}/EcoAssist-experiments"
-          rm -rf "${root}/EcoAssist-experiments/.git"
-          mv "${root}/EcoAssist-experiments" "${root}/EcoAssist" # DEBUG
+          git clone --depth 1 https://github.com/PetervanLunteren/EcoAssist-experiments.git "${root}/EcoAssist"
+          rm -rf "${root}/EcoAssist/.git"
           mv "${root}/EcoAssist/main.py" "${root}/main.py"
+          echo ${{ env.RELEASE_VERSION }} > "${root}/EcoAssist/version.txt"
           echo "EcoAssist cloned"
           
           git clone https://github.com/agentmorris/MegaDetector.git "${root}/MegaDetector"
