--- a/.github/workflows/update-version-txt.yml
+++ b/.github/workflows/update-version-txt.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      RELEASE_VERSION: ${{ github.event.release.tag_name }}
+      # RELEASE_VERSION: ${{ github.event.release.tag_name }}
+      RELEASE_VERSION: v5.192
 
     steps:
     - name: Checkout code
