--- a/.github/workflows/update-version-txt.yml
+++ b/.github/workflows/update-version-txt.yml
@@ -11,8 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      # RELEASE_VERSION: ${{ github.event.release.tag_name }}
-      RELEASE_VERSION: v5.192
+      RELEASE_VERSION: ${{ github.event.release.tag_name }}
 
     steps:
     - name: Checkout code
