--- a/.github/workflows/build-macos-release.yml
+++ b/.github/workflows/build-macos-release.yml
@@ -58,7 +58,9 @@ jobs:
           git clone --depth 1 https://github.com/PetervanLunteren/EcoAssist-experiments.git "${root}/EcoAssist"
           rm -rf "${root}/EcoAssist/.git"
           mv "${root}/EcoAssist/main.py" "${root}/main.py"
-          echo "${{ env.RELEASE_VERSION }}" > "${root}/EcoAssist/version.txt"
+          RAW_VERSION=${{ env.RELEASE_VERSION }}
+          CLEAN_VERSION="${RAW_VERSION#v}"
+          echo "$CLEAN_VERSION" > "${root}/EcoAssist/version.txt"
           echo "EcoAssist cloned"
           
           git clone https://github.com/agentmorris/MegaDetector.git "${root}/MegaDetector"
