--- a/.github/workflows/build-macos-release.yml
+++ b/.github/workflows/build-macos-release.yml
@@ -263,14 +263,25 @@ jobs:
         with:
           project_id: github-file-storage
 
-      - name:  Upload program files to Google Cloud
+      - name: Upload program files to Google Cloud
         run: |
           cd "$HOME"
-          FILE_TO_UPLOAD="macos-${{ env.RELEASE_VERSION }}.tar.xz"
-          gsutil cp -r $FILE_TO_UPLOAD gs://${{ env.BUCKET_NAME }}/${{ env.RELEASE_VERSION }}/$FILE_TO_UPLOAD
+          
+          # init vars
+          BUCKET_NAME="${{ env.BUCKET_NAME }}"
+          PINNED_FOLDER_NAME="${{ env.RELEASE_VERSION }}"
+          LATEST_FOLDER_NAME="latest"
+          PINNED_FILE_NAME="macos-${{ env.RELEASE_VERSION }}.tar.xz"
+          LATEST_FILE_NAME="macos-latest.tar.xz"
+
+          # upload release pinned version
+          gsutil cp -r $PINNED_FILE_NAME gs://$BUCKET_NAME/$PINNED_FOLDER_NAME/$PINNED_FILE_NAME
+
+          # upload latest release version
+          gsutil cp -r $PINNED_FILE_NAME gs://$BUCKET_NAME/$LATEST_FOLDER_NAME/$LATEST_FILE_NAME
 
       - name:  Upload installer to Google Cloud
         run: |
           cd "${{ github.workspace }}/install_files/macos/"
-          FILE_TO_UPLOAD="EcoAssist-${{ env.RELEASE_VERSION }}-installer.zip"
-          gsutil cp -r $FILE_TO_UPLOAD gs://${{ env.BUCKET_NAME }}/latest/EcoAssist-latest-installer.zip
+          INSTALLER="EcoAssist-${{ env.RELEASE_VERSION }}-installer.zip"
+          gsutil cp -r $INSTALLER gs://${{ env.BUCKET_NAME }}/latest/EcoAssist-latest-installer.zip
