--- a/.github/workflows/build-windows-release.yml
+++ b/.github/workflows/build-windows-release.yml
@@ -179,15 +179,15 @@ jobs:
           set LATEST_FILE_NAME=windows-latest.7z
           gsutil cp -r "%PINNED_FILE_NAME%" gs://%BUCKET_NAME%/%PINNED_FOLDER_NAME%/%PINNED_FILE_NAME%
 
-      # - name: Upload latest 7z version to Google Cloud
-      #   shell: cmd
-      #   run: |
-      #     set BUCKET_NAME=${{ env.BUCKET_NAME }}
-      #     set PINNED_FOLDER_NAME=${{ env.RELEASE_VERSION }}
-      #     set LATEST_FOLDER_NAME=latest
-      #     set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.7z
-      #     set LATEST_FILE_NAME=windows-latest.7z
-      #     gsutil cp -r "%PINNED_FILE_NAME%" gs://%BUCKET_NAME%/%LATEST_FOLDER_NAME%/%LATEST_FILE_NAME%
+      - name: Upload latest 7z version to Google Cloud
+        shell: cmd
+        run: |
+          set BUCKET_NAME=${{ env.BUCKET_NAME }}
+          set PINNED_FOLDER_NAME=${{ env.RELEASE_VERSION }}
+          set LATEST_FOLDER_NAME=latest
+          set PINNED_FILE_NAME=windows-${{ env.RELEASE_VERSION }}.7z
+          set LATEST_FILE_NAME=windows-latest.7z
+          gsutil cp -r "%PINNED_FILE_NAME%" gs://%BUCKET_NAME%/%LATEST_FOLDER_NAME%/%LATEST_FILE_NAME%
 
       # - name: Get the release body
       #   shell: pwsh
