--- a/.github/workflows/build-windows-release.yml
+++ b/.github/workflows/build-windows-release.yml
@@ -119,8 +119,8 @@ jobs:
           call "%conda_exe%" run -p "%root%\envs\env-base" pip install torch==2.3.1+cu118 torchvision==0.18.1+cu118 --index-url https://download.pytorch.org/whl/cu118 
           
           @REM env-pytorch
-          call "%conda_exe%" create -p "%root%\envs\env-pytorch" python=3.12 -y
-          call "%conda_exe%" run -p "%root%\envs\env-pytorch" pip3 install torch torchvision --index-url https://download.pytorch.org/whl/cu124
+          call "%conda_exe%" create -p "%root%\envs\env-pytorch" python=3.8 -y
+          call "%conda_exe%" run -p "%root%\envs\env-pytorch" "%conda_exe%" pytorch==2.3.0 torchvision==0.18.0 torchaudio==2.3.0 pytorch-cuda=11.8 -c pytorch -c nvidia -y
           call "%conda_exe%" run -p "%root%\envs\env-pytorch" pip install ultralytics==8.0.230
           call "%conda_exe%" run -p "%root%\envs\env-pytorch" pip install timm
           call "%conda_exe%" run -p "%root%\envs\env-pytorch" pip install pandas
