--- a/.github/workflows/update-version-txt.yml
+++ b/.github/workflows/update-version-txt.yml
@@ -14,14 +14,19 @@ jobs:
       RELEASE_VERSION: ${{ github.event.release.tag_name }}
 
     steps:
-    - name: Checkout code
+    - name: Checkout the latest version of main
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
+    - name: Checkout the main branch explicitly
+      run: |
+        git checkout main
+        git pull origin main --rebase  # Ensure you're up to date with the remote
+
     - name: Replace contents of version.txt
       run: |
-        RAW_VERSION=${{ env.RELEASE_VERSION }}
+        RAW_VERSION=v5.22
         CLEAN_VERSION="${RAW_VERSION#v}"
         echo "$CLEAN_VERSION" > version.txt
         
@@ -34,6 +39,6 @@ jobs:
 
     - name: Push changes
       run: |
-        git push origin HEAD:refs/heads/main
+        git push origin main
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
